# cabal-nix-template

./: cabal-nix-template.cabal  flake.nix  hie.yaml  my-templates.cabal  templates.cabal
app/: CabalNix.hs  Common.hs  Main.hs  NpmNix.hs
app/Node/templates/: package.json
app/NpmTemplates/: package.json
app/templates/cabal/: flake.nix
app/templates/cabal/scripts/: check.sh  format.sh  lint.sh
app/templates/node/: .prettierrc  flake.nix  package.json
