cabal-version:      2.4
name:               templates
version:            0.1.0.0
maintainer:         dmitrii.sk@gmail.com
author:             Dmitrii Skurikhin
extra-source-files: CHANGELOG.md

executable templates
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:
        Common
        CabalNix
        NpmNix

    default-language: Haskell2010
    build-depends:
        base ^>=4.14.1.0,
        cli ^>=0.2.0,
        shelly ^>=1.10.0,
        neat-interpolation >=0.5.1.3,
        text ^>=2.0,
        aeson >=2.0.3.0,
        bytestring >=0.11.3.0,
        filepath >=1.4.2.2,
        text-replace,
        directory,
        basement
