cabal-version:      3.6
name:               templates
version:            0.1.0.0
author:             Dmitrii Skurikhin
maintainer:         dmitrii.sk@gmail.com
extra-source-files: CHANGELOG.md

executable templates
    main-is:          Main.hs
    build-depends:
        base
        , cli ^>=0.2.0
        , shelly ^>=1.10.0
        , neat-interpolation >=0.5.1.3
        , text ^>=2.0
    hs-source-dirs:   app
    default-language: Haskell2010
    other-modules:
        Common
        CabalNix
        NpmNix
